@@ -1,3 +1,15 @@
+2011-05-16  Chris Rogers  <crogers@google.com>
+
+        Unreviewed build fix.
+
+        Just return "nullptr" to fix compile errors
+        https://bugs.webkit.org/show_bug.cgi?id=60932
+
+        * platform/audio/mac/AudioBusMac.mm:
+        (WebCore::AudioBus::loadPlatformResource):
+        * platform/audio/mac/AudioFileReaderMac.cpp:
+        (WebCore::AudioFileReader::createBus):
+
 2011-05-16  Emil A Eklund  <eae@chromium.org>
 
         Reviewed by Eric Seidel.
